--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/image-list/item.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/image-list/item.html
@@ -1,5 +1,6 @@
 <template data-sly-template.item="${@ item}">
     <article class="cmp-image-list__item-content">
+        <i data-sly-test="${item.icon}" class="icon ${item.icon}" ></i>
         <a class="cmp-image-list__item-image-link"
            href="${item.URL}"
            data-sly-test="${item.image}"
